--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,11 @@
 /*TAB*/
-body{overflow:hidden;}
+body{
+    width:100vw;
+    overflow:hidden;
+    position:fixed;
+    top:0;
+    left:0;
+}
 #contents{
     width:100%;
     height:100%;
