--- a/css/layout.css
+++ b/css/layout.css
@@ -117,3 +117,16 @@ body{
     -ms-transform: translateY(-300vh);
     transform: translateY(-300vh);
 }
+
+
+
+/*TABLE*/
+.table--outer{margin:50px auto;}
+.table--fix{width:85px;}
+.table--fix th{background:yellow; border:1px solid black;}
+th, td{height:50px;}
+
+.scrollbox{width:calc(100vw - 85px);/*고정된 가로길이 빼기*/ overflow-x:auto;}
+.scrollbox table{width:100%;}
+.scrollbox td{min-width:70px; text-align:center; border:1px solid black;}
+.scrollbox td:first-child{border-left:0;}
