--- a/css/layout.css
+++ b/css/layout.css
@@ -124,7 +124,7 @@ body{
 .table--outer{margin:50px auto;}
 .table--fix{width:85px;}
 .table--fix th{border:1px solid white;}
-th, td{height:25px;}
+th, td{height:40px;}
  
 .scrollbox{width:calc(100vw - 85px);/*고정된 가로길이 빼기*/ overflow-x:auto;}
 .scrollbox table{width:100%;}
@@ -135,7 +135,7 @@ th, td{height:25px;}
 
 .vat {vertical-align: top;}
 
-.att {position: relative; top: 0; left: 0;}
+.att, .abs {position: relative; top: 0; left: 0;}
 .att:after {
     content: '';
     width: 22px;
@@ -149,4 +149,22 @@ th, td{height:25px;}
     transform: translate(-50%, -50%);
     border: 2px solid rgb(255,255,255);
     border-radius: 50%;
+}
+.abs:before {
+    content: '';
+    width: 2px;
+    height: 22px;
+    background: rgb(255,255,255);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.abs:after {
+    content: '';
+    width: 22px;
+    height: 2px;
+    background: rgb(255,255,255);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
