--- a/css/layout.css
+++ b/css/layout.css
@@ -155,24 +155,26 @@ th, td{height:40px;}
     width: 2px;
     height: 22px;
     display: block;
+    margin: -11px 0 0 -1px;
     position: absolute;
     top: 50%;
     left: 50%;
     background: rgb(255,255,255);
-    -webkit-transform: rotate(45deg) translate(-50%, -50%);
-    -ms-transform: rotate(45deg) translate(-50%, -50%);
-    transform: rotate(45deg) translate(-50%, -50%);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 .abs:after {
     content: '';
     width: 22px;
     height: 2px;
     display: block;
+    margin: -1px 0 0 -11px;
     position: absolute;
     top: 50%;
     left: 50%;
     background: rgb(255,255,255);
-    -webkit-transform: rotate(45deg) translate(-50%, -50%);
-    -ms-transform: rotate(45deg) translate(-50%, -50%);
-    transform: rotate(45deg) translate(-50%, -50%);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
