--- a/css/timer.css
+++ b/css/timer.css
@@ -1,7 +1,7 @@
 .timer-box {color: rgb(255,255,255);}
 
 /*공통*/
-.num {
+#num {
 	width: 100px;
 	height:200px;
 	position:relative;
@@ -9,7 +9,7 @@
 	left: 0;
 	background-color:rgb(50,50,50);
 }
-.num span {
+#num span {
 	display: block;
 	position: absolute;
 	background-color: rgb(255,255,255);
@@ -59,20 +59,20 @@
 }
 
 /*0~9*/
-#num0 .n4 {display: none;}
+.num0 .n4 {display: none;}
 
-#num1 .n1, #num1 .n5, #num1 .n2, #num1 .n6, #num1 .n4 {display: none;}
+.num1 .n1, .num1 .n5, .num1 .n2, .num1 .n6, .num1 .n4 {display: none;}
 
-#num2 .n1, #num2 .n7 {display: none;}
+.num2 .n1, .num2 .n7 {display: none;}
 
-#num3 .n1, #num3 .n5 {display: none;}
+.num3 .n1, .num3 .n5 {display: none;}
 
-#num4 .n2, #num4 .n6, #num4 .n5{ display: none;}
+.num4 .n2, .num4 .n6, .num4 .n5{ display: none;}
 
-#num5 .n3, #num5 .n5 {display: none;}
+.num5 .n3, .num5 .n5 {display: none;}
 
-#num6 .n3 {display: none;}
+.num6 .n3 {display: none;}
 
-#num7 .n1, #num7 .n4, #num7 .n6, #num7 .n5 {display: none;}
+.num7 .n1, .num7 .n4, .num7 .n6, .num7 .n5 {display: none;}
 
-#num9 .n5, #num9 .n6 {display: none;}
+.num9 .n5, .num9 .n6 {display: none;}
