--- a/css/timer.css
+++ b/css/timer.css
@@ -59,20 +59,20 @@
 }
 
 /*0~9*/
-.num0 .n4 {display: none;}
+#num.num0 .n4 {display: none;}
 
-.num1 .n1, .num1 .n5, .num1 .n2, .num1 .n6, .num1 .n4 {display: none;}
+#num.num1 .n1, #num.num1 .n5, #num.num1 .n2, #num.num1 .n6, #num.num1 .n4 {display: none;}
 
-.num2 .n1, .num2 .n7 {display: none;}
+#num.num2 .n1, #num.num2 .n7 {display: none;}
 
-.num3 .n1, .num3 .n5 {display: none;}
+#num.num3 .n1, #num.num3 .n5 {display: none;}
 
-.num4 .n2, .num4 .n6, .num4 .n5{ display: none;}
+#num.num4 .n2, #num.num4 .n6, #num.num4 .n5{ display: none;}
 
-.num5 .n3, .num5 .n5 {display: none;}
+#num.num5 .n3, #num.num5 .n5 {display: none;}
 
-.num6 .n3 {display: none;}
+#num.num6 .n3 {display: none;}
 
-.num7 .n1, .num7 .n4, .num7 .n6, .num7 .n5 {display: none;}
+#num.num7 .n1, #num.num7 .n4, #num.num7 .n6, #num.num7 .n5 {display: none;}
 
-.num9 .n5, .num9 .n6 {display: none;}
+#num.num9 .n5, #num.num9 .n6 {display: none;}
