--- a/css/timer.css
+++ b/css/timer.css
@@ -92,7 +92,7 @@
 	width: 30px;
 	height: 200px;
 	display: inline-block;
-	margin-right: 10px;
+	margin: 0 15px;
 	position: relative;
 	top: 0;
 	left: 0;
