--- a/css/timer.css
+++ b/css/timer.css
@@ -1,10 +1,17 @@
-body{
+body {
     color: rgb(255,255,255);
     background: rgb(0,0,0);
 }
-
+#contents {
+	width: 100%;
+	height: 100vh;
+	display: table;
+}
 /*공통*/
 .timer-box {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
 	font-size: 0;
 	color: rgb(255,255,255);
 }
