--- a/css/timer.css
+++ b/css/timer.css
@@ -117,6 +117,28 @@ body {
 	position: absolute;
 	left: 0;
 	background-color: rgb(255,255,255);
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
 }
 .dot .d1 {top: 50px;}
 .dot .d2 {bottom: 50px;}
+
+@-webkit-keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
