--- a/css/timer.css
+++ b/css/timer.css
@@ -114,8 +114,8 @@ body {
 	position: absolute;
 	left: 0;
 	background-color: rgb(255,255,255);
-	-webkit-animation-name: fadeIn;
-	animation-name: fadeIn;
+	-webkit-animation: fadeIn 2s;
+	animation: fadeIn 2s;
 }
 .dot .d1 {top: 50px;}
 .dot .d2 {bottom: 50px;}
